<resources>
    <string name="app_name">Head Start</string>
    <string name="action_settings">Settings</string>
    <string name="splash_screen_description">Splash Screen</string>
    <string name="test_mode">Test Mode</string>
    <string name="test_mode_enabled">Test Mode enabled</string>
    <string name="test_mode_disabled">Test Mode disabled</string>
    <string name="populate_form">Populate Form</string>
    <string name="separator">Separator</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="add">Add</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="sometimes">sometimes</string>
    <string name="other">Other</string>
    <string name="if_other">If other:</string>
    <string name="of_which_the_content_is">Provide details below:</string>
    <string name="if_yes">If yes:</string>
    <string name="login">LOGIN</string>
    <string name="login_button">Log In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="link_to_dropbox">Haven\'t linked to dropbox -> Link to Dropbox</string>
    <string name="switch_dropbox_account"> Already linked to dropbox -> Switch Accounts</string>
    <string name="unlink_message">
        	"You must first unlink the current linked account to switch to another account.\n\n" +
	    	"You can still use this app offline with any account already signed in.\n\n" +
	    	"Unlink an account offline will cause you not to be able to log into any account resulting in this App being not applicable!\n\n" +
	    	"Yes to unlink the current account and proceed to swtich accounts, No to cancel."</string>
    <string name="add_child">Add a new child:</string>
    <string name="select_child">Select a existing child:</string>
    <string name="enter_forms">Start Editing Forms</string>
    <string name="external_dir">GetSignature</string>
    <string name="print_name">Print Name:</string>
    <string name="please_sign_below">Please Sign below ...</string>
    <string name="Type_your_name_here">Type your name here</string>
    <string name="date_time_title">Set Date/Time</string>
    <string name="set_date">Date</string>
    <string name="set_time">Time</string>
    <string name="edit_the_text">Edit the Content</string>
    <string name="google_voice">Google Voice</string>
    <string name="sphinx_voice">Sphinx Voice</string>
    <string name="edit_from_here">Edit from here</string>
    <string name="please_speak_google">\nPlease speak now\n</string>
    <string name="analyzing_speech">Analyzing Speech...</string>
    <string name="please_wait_while_the_speech_is_being_analyzed">Please wait while the speech is being analyzed.</string>
    <string name="preparing_the_recognizer">Preparing the recognizer</string>
    <string name="fail_to_init">Failed to init recognizer</string>
    <string name="please_speak_sphinx">Please speak now</string>
    <string name="digits_caption">
        "1. allow [child] to choose &lt;noisy words&gt; from selection\n"
		"2. parents completed &lt;noisy words&gt; previous assignment\n"
		"3. begins &lt;noisy words&gt; associative play\n"
		"4. [CDP] ([[and][reviewed today's family play group]]| [[and] [invite mom to upcoming play group]])+\n"
		"5. [CDP] [will] encourage associative play [through|via] animated demonstration [and purposeful play]\n"
		"6. Encourage more book (exploration | reading) &lt;noisy words&gt; during the week\n"
		"7. ((Start talking)|talk) about safety proofing in mom's parents' home\n"
		"8. [They have] read &lt;#one-ten&gt; times together this week\n"
		"9. Replaces &lt;noisy words&gt; some objects where &lt;noisy words&gt; they belong\n"
		"10. Come to group at least once before (the program|this|the) year ends\n"
		"11. Put the toys back to their original places\n"
		"12. Come to group with [the] kids"
	</string>
    <string-array name="number_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="text_array">
        <item>1; allow [child] to choose from selection</item>
        <item>2; parents completed previous assignment</item>
        <item>3; begins associative play</item>
        <item>4; [CDP] ([[and][reviewed today\'s family play group]]| [[and] [invite mom to upcoming play group]])+</item>
        <item>5; [CDP] [will] encourage associative play [through|via] animated demonstration [and purposeful play]</item>
        <item>6; encourage more book (exploration | reading) during the week</item>
        <item>7; [start talking] talk about safety proofing in mom\'s parents\' home</item>
        <item>8; [they have] read # times together this week</item>
        <item>9; replaces some objects where they belong</item>
        <item>10; come to group at least once before (the program|this|the) year ends</item>
        <item>11; put the toys back to their original places</item>
        <item>12; come to group with [the] kids</item>
    </string-array>
    <string name="head_start_family_demographics">Head Start Family Demographics</string>
    <string name="childs_name">Child\'s name</string>
    <string name="birthday">Birthday</string>
    <string name="start_date">Start Date</string>
    <string name="address">Address</string>
    <string name="temporary_living_condition">Temporary Living Condition</string>
    <string name="transportation">Parent\'s Name(s)</string>
    <string name="self_transport">Self transport</string>
    <string name="bussed">Bussed</string>
    <string name="primary_contact_person">Primary Contact Person</string>
    <string name="relationship">Relationship</string>
    <string name="phone">Phone</string>
    <string name="mother">Mother</string>
    <string name="father">Father</string>
    <string name="preferred_method_of_contact">Preferred Method of Contact</string>
    <string name="email">Email</string>
    <string name="text">Text</string>
    <string name="best_availability">Best Availability</string>
    <string name="morning">Morning</string>
    <string name="afternoon">Afternoon</string>
    <string name="evening">Evening</string>
    <string name="access_to_a_computer">Access to a Computer</string>
    <string name="secondary_contact_person">Secondary Contact Person</string>
    <string name="primary_language_spoken_at_home">Primary Language Spoken at Home</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="arabic">Arabic</string>
    <string name="is_either_parent_an_active_member">Is either parent/guadian an active member of the Military(Who)</string>
    <string name="circle_resources">Circle Resources</string>
    <string name="tanf">TANF</string>
    <string name="ssi">SSI</string>
    <string name="snap_food_stamps">SNAP/Food Stamps</string>
    <string name="wic">WIC</string>
    <string name="housing">Housing</string>
    <string name="child_support">Child Support</string>
    <string name="med_assist">Med. Asssit.</string>
    <string name="do_you_receive_child_care_subsidy">Do you receive child care subsidy?</string>
    <string name="is_this_child_in_foster_or_kin_care">Is this child in Foster or Kin Care</string>
    <string name="open_cy_case">Open C&amp;Y case</string>
    <string name="are_there_any_written_custody_arrangements">Are there any written custody arrangements?</string>
    <string name="pfa">PFA</string>
    <string name="against_whom">Against Whom</string>
    <string name="pc_rep">PC rep</string>
    <string name="are_there_pets_in_the_home">Are there pets in the home?</string>
    <string name="num_of_adults_living_in_household"># of Adults living in household</string>
    <string name="num_of_children_living_in_household"># of Children living in household</string>
    <string name="num_of_years_parent_in_hs_ehs_program"># of Years Parent in HS/EHS program</string>
    <string name="sibling_in_HS_EHS">Sibling in HS/EHS</string>
    <string name="does_child_receive_any_special_services">Does child receive any special services? (MH, IEP, TSS, etc.)</string>
    <string name="head_start_family_assessment">Head Start Family Assessment</string>
    <string name="parents_guardians_name">parent(s)/guadian(s) Name</string>
    <string name="staff_name">Staff Name</string>
    <string name="date_of_start_of_year_assessment">Date of Start of Year Assessment</string>
    <string name="date_of_end_of_year_assessment">Date of End of Year Assessment</string>
    <string name="start_of_year">Start of Year</string>
    <string name="end_of_year">End of Year</string>
    <string name="for_each_statement_in_this_assessment">
		"For each statement in this assessment, give a response of 1, 2 or 3 indicating how "
		"you feel the statement fits you: 1 is “yes”, 2 is “not sure” or “sometimes”, and 3 is “no”."</string>
	<string name="totals">Totals</string>
	<string name="positive_parent_child_relationships">POSITIVE PARENT-CHILD RELATIONSHIPS</string>
    <string name="my_parenting_skills_are_effective">I am confident that my parenting skills are effective</string>
    <string name="meet_my_childs_needs">I am able to meet my child\'s needs</string>
    <string name="soothe_my_child">I know how to soothe my child when he/she is upset</string>
    <string name="avoid_using_physical_punishment">I avoid using physical punishment when my child does something wrong</string>
    <string name="understand_my_childs_needs">I understand my child\'s needs</string>
    <string name="my_child_may_not_always_do_as_I_say">I realize my child may not always do as I say</string>
    <string name="spend_special_time_with_my_child">I spend special time with my child doing things that he/she enjoys</string>
    <string name="how_would_you_describe_your_relationship">How would you describe your relationship with your child(ren)?</string>
    <string name="what_is_the_most_difficult_part">What is the most difficult part of parenting for you?</string>
    <string name="families_as_lifelong_educators">FAMILIES AS LIFELONG EDUCATORS</string>
    <string name="my_childs_behavior_has_meaning">I understand that my child\'s behavior has meaning</string>
    <string name="learn_by_exploring_the_environment">I allow my child to learn by exploring the environment</string>
    <string name="We_have_family_rules_and_daily_routines_that_we_follow">We have family rules and daily routines that we follow</string>
    <string name="I_create_activities_at_home_to_support_my_childs_learning">I create activities at home to support my child\'s learning</string>
    <string name="developing_a_positive_relationship">I understand the importance of developing a positive relationship with my child\'s teacher</string>
    <string name="What_are_your_hopes_for_your_child’s_future">What are your hopes for your child\'s future?</string>
    <string name="What_do_you_hope_your_child_will_learn_while_in_Head_Start">What do you hope your child will learn while in Head Start/Early Head Start?</string>
    <string name="family_connections_to_peers_and_community">FAMILY CONNECTIONS TO PEERS AND COMMUNITY</string>
    <string name="I_have_family_members_and_or_friends">I have family members and/or friends who I can ask for help when I need it.</string>
    <string name="My_child_spends_time_playing_with_other_children">My child spends time playing with other children.</string>
    <string name="I_have_a_positive_relationship_with_my_neighbors">"I have a positive relationship with my neighbors.</string>
</resources>