<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="450dp"
    android:paddingBottom="@dimen/activity_vertical_margin"
 	android:paddingLeft="@dimen/activity_horizontal_margin"
 	android:paddingRight="@dimen/activity_horizontal_margin"
 	android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"  >
    
    <LinearLayout 
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle" >
        <Button 
            android:id="@+id/cancel"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />
        <Button 
            android:id="@+id/clear"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/clear"
            style="?android:attr/buttonBarButtonStyle" />
        <Button 
            android:id="@+id/save"
            android:layout_height="50dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/save"
            style="?android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    
    <LinearLayout 
        android:layout_height="wrap_content"
		android:layout_width="match_parent"
		android:layout_marginTop="10dp"
		android:orientation="horizontal" >
            <TextView 
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:text="@string/print_name" 
                android:textAppearance="?android:attr/textAppearanceMedium" />
            <EditText 
                android:id="@+id/print_name"
                android:layout_height="wrap_content" 
                android:layout_width="0dp"
                android:layout_weight="1" 
                android:singleLine="true"
                android:maxLength="20"
                android:inputType="textCapWords"
                android:hint="@string/Type_your_name_here" >
                <requestFocus />
            </EditText>
	</LinearLayout>
	
    <TextView 
        android:layout_height="wrap_content" 
        android:layout_width="wrap_content"
        android:layout_marginTop="20dp"
        android:maxLength="30"
        android:text="@string/please_sign_below" 
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/SignatureLayout"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="horizontal" />
</LinearLayout>