<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:gravity="center_horizontal" >
        
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/item_vertical_margin"
        android:orientation="horizontal" >
        
        <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginRight="30dp"
	        android:text="@string/add_child"
	        android:textAppearance="?android:attr/textAppearanceLarge" /> 
       	<EditText
       	    android:id="@+id/add_family_edittext"
       	    android:layout_width="0dp"
       		android:layout_height="wrap_content"
       		android:layout_weight="1"
       		android:layout_marginRight="20dp"
       		android:paddingLeft="@dimen/clickable_textView_horizontal_padding"
            android:paddingRight="@dimen/clickable_textView_horizontal_padding"
            android:paddingTop="@dimen/clickable_textView_vertical_padding"
            android:paddingBottom="@dimen/clickable_textView_vertical_padding"
       	    android:background="@drawable/clickable_textview_bg"
       	    android:singleLine="true"
       	    android:inputType="textPersonName"
       	    android:textAppearance="?android:attr/textAppearanceLarge" />
       	<Button
	        android:layout_width="150dp"
	        android:layout_height="@dimen/button_done_layout_height"
	        android:gravity="center"
	        android:onClick="addFamily"
	        android:text="@string/add"
	        android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
       	
	    <TextView 
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="@dimen/item_vertical_margin"
	        android:layout_marginBottom="@dimen/item_vertical_margin"
	        android:layout_marginRight="30dp"
	        android:text="@string/select_child"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <Spinner 
	        android:id="@+id/family_spinner"
	        android:layout_width="200dp"
	        android:layout_height="50dp"
	        android:layout_marginTop="@dimen/item_vertical_margin"
	        android:background="@drawable/clickable_textview_bg"
	        android:gravity="center"
	        android:textAlignment="center"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	</LinearLayout>
	
    
	<Button
        android:id="@+id/button_enter_forms"
        android:layout_width="@dimen/button_done_layout_width"
        android:layout_height="@dimen/button_done_layout_height"
        android:layout_margin="@dimen/button_done_margin"
        android:gravity="center"
        android:onClick="onEnterForms"
        android:text="@string/enter_forms"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    
</LinearLayout>